Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "number_of_weeks = None"
+    "number_of_weeks = '3'"
    ]
   },
   {
